# emf

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .travis.yml  404.html  CMakeLists.txt  LICENSE  README.md  constant.EMF_CBASE_INTERFACE_EXTENSION_NAME_MAX_LENGTH.html  conventions.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json
.github/workflows/: cmake.yml
cmake/: VersionHelper.cmake
doc/guide/: book.toml
emf-core/: CMakeLists.txt  index.html
emf-core-base/: index.html
emf-core-base/api/: index.html  library.html  module.html  sys.html  version.html
emf-core-base/reference/: constant.EMF_CBASE_INTERFACE_INFO_NAME_MAX_LENGTH.html  constant.EMF_CBASE_LIBRARY_LOADER_DEFAULT_HANDLE.html  constant.EMF_CBASE_LIBRARY_LOADER_TYPE_MAX_LENGTH.html  constant.EMF_CBASE_MODULE_INFO_NAME_MAX_LENGTH.html  constant.EMF_CBASE_MODULE_INFO_VERSION_MAX_LENGTH.html  constant.EMF_CBASE_MODULE_LOADER_DEFAULT_HANDLE.html  constant.EMF_CBASE_MODULE_LOADER_TYPE_MAX_LENGTH.html  constant.EMF_CBASE_NATIVE_LIBRARY_TYPE_NAME.html  constant.EMF_CBASE_NATIVE_MODULE_INTERFACE_SYMBOL_NAME.html  constant.EMF_CBASE_NATIVE_MODULE_TYPE_NAME.html  constant.EMF_CBASE_OS_PATH_CHAR.html  enum.emf_cbase_bool_t.html  enum.emf_cbase_library_error_t.html  enum.emf_cbase_library_predefined_handles_t.html  enum.emf_cbase_module_error_t.html  enum.emf_cbase_module_predefined_handles_t.html  enum.emf_cbase_module_status_t.html  enum.emf_cbase_version_error_t.html  enum.emf_cbase_version_release_t.html  fn.emf_cbase_library_get_data_symbol.html  fn.emf_cbase_library_get_function_symbol.html  fn.emf_cbase_library_get_library_types.html  fn.emf_cbase_library_get_loader_handle.html  fn.emf_cbase_library_get_num_loaders.html  fn.emf_cbase_library_library_exists.html  fn.emf_cbase_library_load.html  fn.emf_cbase_library_register_loader.html  fn.emf_cbase_library_type_exists.html  fn.emf_cbase_library_unload.html  fn.emf_cbase_library_unregister_loader.html  fn.emf_cbase_library_unsafe_create_library_handle.html  fn.emf_cbase_library_unsafe_get_loader_handle.html  fn.emf_cbase_library_unsafe_get_loader_interface.html  fn.emf_cbase_library_unsafe_get_loader_library_handle.html  fn.emf_cbase_library_unsafe_link_library.html  fn.emf_cbase_library_unsafe_remove_library_handle.html  fn.emf_cbase_module_add_dependency.html  (+128 more)
emf-core/emf_core/: CMakeLists.txt
emf-core/emf_core/include/emf_core/: emf_bool_t.h  emf_config.h  emf_core.h  emf_core_interface_t.h  emf_error_t.h  emf_event.h  emf_fn_ptr_id_t.h  emf_fn_ptr_t.h  emf_fs.h  emf_library.h  emf_macros.h  emf_module.h  emf_version_t.h  version.h.in
emf-core/emf_core_binding/: CMakeLists.txt
emf-core/emf_core_binding/include/emf_core/: emf_binding.h
emf-core/emf_core_binding/src/: emf_binding.cpp  emf_config.cpp  emf_core.cpp  emf_event.cpp  emf_fs.cpp  emf_library.cpp  emf_module.cpp  emf_version_t.cpp
emf-core/emf_core_cpp/: CMakeLists.txt
emf-core/emf_core_cpp/include/emf_core/: emf_config.hpp  emf_core.hpp  emf_event.hpp  emf_fs.hpp  emf_library.hpp  emf_lock.hpp  emf_module.hpp  emf_version_t.hpp  version.hpp
emf-core/reference/: constant.EMF_CONFIG_NAMESPACE_MAX_LENGTH.html  constant.EMF_CONFIG_PROPERTY_MAX_LENGTH.html  constant.EMF_EVENT_NAME_MAX_LENGTH.html  constant.EMF_FILE_HANDLER_DEFAULT_HANDLE.html  constant.EMF_FILE_TYPE_MAX_LENGTH.html  constant.EMF_NATIVE_FILE_HANDLER_FILE_TYPE_NAME.html  constant.EMF_PATH_MAX.html  enum.emf_access_mode_t.html  enum.emf_config_property_type_t.html  enum.emf_file_open_mode_t.html  enum.emf_fs_direction_t.html  enum.emf_fs_entry_type_t.html  enum.emf_fs_link_t.html  enum.emf_fs_predefined_handles_t.html  fn.emf_config_add_namespace.html  fn.emf_config_add_property_boolean.html  fn.emf_config_add_property_integer.html  fn.emf_config_add_property_real.html  fn.emf_config_add_property_string.html  fn.emf_config_get_namespaces.html  fn.emf_config_get_num_namespaces.html  fn.emf_config_get_num_properties.html  fn.emf_config_get_properties.html  fn.emf_config_get_property_array_size.html  fn.emf_config_get_property_string_max_size.html  fn.emf_config_get_property_string_size.html  fn.emf_config_get_property_type.html  fn.emf_config_namespace_exists.html  fn.emf_config_property_exists.html  fn.emf_config_property_read_bool.html  fn.emf_config_property_read_integer.html  fn.emf_config_property_read_real.html  fn.emf_config_property_read_string.html  fn.emf_config_property_write_bool.html  fn.emf_config_property_write_integer.html  fn.emf_config_property_write_real.html  fn.emf_config_property_write_string.html  fn.emf_config_remove_namespace.html  fn.emf_config_remove_property.html  fn.emf_event_create.html  (+146 more)
emf-core/systems/: config.html  core.html  event.html  filesystem.html  index.html  library.html  module.html
emf_core/: CMakeLists.txt  version.json
emf_core/include/emf_core/: emf_bool_t.h  emf_config.h  emf_core.h  emf_core_interface_t.h  emf_error_t.h  emf_event.h  emf_fn_ptr_id_t.h  emf_fn_ptr_t.h  emf_fs.h  emf_library.h  emf_macros.h  emf_module.h  emf_version_t.h
emf_core_base/: CMakeLists.txt  empty.c  version.json
emf_core_base/include/emf_core_base/: emf_cbase_bool_t.h  emf_cbase_error_t.h  emf_cbase_fn_ptr_id_t.h  emf_cbase_fn_ptr_t.h  emf_cbase_interface_t.h  emf_cbase_library.h  emf_cbase_macros.h  emf_cbase_module.h  emf_cbase_sys.h  emf_cbase_version_t.h  version.h.in
emf_core_base/include/emf_core_base/extensions/emf_unwind_internal/: emf_unwind_internal.h
emf_core_base_bindings/: CMakeLists.txt
emf_core_base_bindings/include/emf_core_base_bindings/: emf_cbase_bindings.h  version.h.in
emf_core_base_bindings/src/: emf_cbase_bindings.cpp  emf_cbase_library.cpp  emf_cbase_module.cpp  emf_cbase_sys.cpp  emf_cbase_version_t.cpp
emf_core_bindings/: CMakeLists.txt
emf_core_bindings/include/emf_core_bindings/: emf_core_bindings.h  version.h.in
emf_core_bindings/src/: emf_config.cpp  emf_core.cpp  emf_core_bindings.cpp  emf_event.cpp  emf_fs.cpp  emf_library.cpp  emf_module.cpp  emf_version_t.cpp
scripts/: version_management.py
(+396 files in other folders)
